--- a/paginas extras/assistenciatecnica.html
+++ b/paginas extras/assistenciatecnica.html
@@ -12,7 +12,7 @@
     <style>
 
     body{
-      background-image: url(https://cdnb.artstation.com/p/assets/images/images/023/997/323/large/adrian-alfonso-paisaje-montanas-vertical.jpg?1580990164);
+      background-image: url(/imagens/fundosvg.jpg);
      
     }
     .selemarca{
