--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section>
 
     <section class="s_tecnica">
-      <a href="paginas extras/menureparos.html">
+      <a href="/paginas extras/menureparos.html">
         <div class="menu" >
             
           <picture>
