--- a/paginas extras/telaapple.html
+++ b/paginas extras/telaapple.html
@@ -51,7 +51,7 @@
         
 <div class="tituloproduto">
             <h3>IPHONE 6/6S PLUS </h3>
-            <img src="imagens/iphone6plus.png" alt="" class="modelo">
+            <img src="/imagens/iphone6plus.png" alt="" class="modelo">
             <p class="valor+descriçao" >A substituição desta tela, restabelece todas as
                funções do TOUCH SCREEN e LCD/DISPLAY 
                (VIDRO/TOQUE E IMAGEM).</p>
@@ -199,7 +199,7 @@
 
 <div class="tituloproduto">
   <h3>IPHONE XS MAX </h3>
-  <img src="http://cdn.shopify.com/s/files/1/0557/9289/4112/products/refurb-iphone-xs-max-gold-depositphotos-bgremover_1200x1200.png?v=1639528980" alt="" class="modelo">
+  <img src="https://www.thekase.com/on/demandware.static/-/Sites-tk-product/default/dwdfea1423/38936035/130406_small.png" alt="" class="modelo">
   <p class="valor+descriçao" >A substituição desta tela, restabelece todas as
      funções do TOUCH SCREEN e LCD/DISPLAY 
      (VIDRO/TOQUE E IMAGEM).</p>
