--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BBB REPAROS</title>
-    <link rel="stylesheet" href="/estilo/style.css">
-    <link rel="stylesheet" href="/estilo/menu.css"> 
+    <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="estilo/menu.css"> 
   </head>
 
 <body> 
@@ -19,7 +19,7 @@
         ASSISTENCIA TECNICA ESPECIALIZADA
     </p>
     <nav>
-        <a href="/index.html">INICIO</a>
+        <a href="#">INICIO</a>
         <a href="https://api.whatsapp.com/message/VSEXUH67RBEPP1?autoload=1&app_absent=0"target="_blank">WHATSAPP</a>
         <a href="https://www.instagram.com/bbbreparos/"target="_blank">INSTAGRAM</a>
     </nav>
@@ -39,7 +39,7 @@
     </section>
 
     <section class="s_tecnica">
-      <a href="/paginas extras/menureparos.html">
+      <a href="/paginas-extras/menureparos.html">
         <div class="menu" >
             
           <picture>
