--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BBB REPAROS</title>
-    <link rel="stylesheet" href=".//estilo/style.css">
-    <link rel="stylesheet" href=".//estilo/menu.css"> 
+    <link rel="stylesheet" href="../estilo/style.css">
+    <link rel="stylesheet" href="../estilo/menu.css"> 
 
   </head>
 
@@ -40,14 +40,14 @@
     </section>
 
     <section class="s_tecnica">
-      <a href=".//paginas-extras/menureparos.html">
+      <a href="../paginas-extras/menureparos.html">
         <div class="menu" >
             
           <picture>
             <source media="(max-width:900px )" srcset="imagens/assistencia-pq.png">
             <img src="imagens/assistencia.png" alt="">
         </picture></a>
-        <a href="paginas extras/menureparos.html">
+        <a href="../paginas extras/menureparos.html">
         <h2 class="linkloja"  > ASSISTENCIA TECNICA </h2></a>
           
         </div>
