--- a/menureparos.html
+++ b/menureparos.html
@@ -29,7 +29,7 @@
 <section class="s_celular" >
   <div class="menu" >
 
-    <a href="/paginas extras/assistenciatecnica.html">
+    <a href="assistenciatecnica.html">
       
       <picture>
         <source media="(max-width:900px )" srcset="/imagens/Phonepq.png">
@@ -38,7 +38,7 @@
   
   
     </a>
-   <a href="/paginas extras/assistenciatecnica.html"><h2 class="linkloja" > CELULAR </h2></a>
+   <a href="assistenciatecnica.html"><h2 class="linkloja" > CELULAR </h2></a>
   
   
   </div>
