--- a/assistenciatecnica.html
+++ b/assistenciatecnica.html
@@ -7,12 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BBB_REPAROS</title>
     <link rel="stylesheet" href="estilo/marcascell.css">
+    <link rel="stylesheet" href="estilo/style.css">
     <style>
 
-    body{
-      background-image: url(/imagens/fundosvg.jpg);
-     
-    }
+   
     .selemarca{
       border-radius: 0px 0px 10px 10px; 
       margin: auto;
