--- a/telaXiaomi.html
+++ b/telaXiaomi.html
@@ -341,7 +341,7 @@
 
       
     </section> 
-    <a href="assistenciatecnica.html">  <img src="imagens/voltar.png" alt=""></a>
+    <a href="assistenciatecnica.html">  <img src="imagens/voltar.png" alt="" class="bnt_V"></a>
     
 
 
