--- a/telasamsung.html
+++ b/telasamsung.html
@@ -357,5 +357,5 @@
       
     
   </section>
-  <a href="assistenciatecnica.html">  <img src="imagens/voltar.png" alt=""></a>
+  <a href="assistenciatecnica.html">  <img src="imagens/voltar.png" alt="" class="bnt_V" ></a>
   </html>
